kubernetes-manifests/mysqldb.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysqldb-d
  namespace: phpcrudapp
  labels:
    app: mysqldb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysqldb
  template:
    metadata:
      labels:
        app: mysqldb
    spec:
      volumes:
          - name: db-cache
            emptyDir: {}
      containers:
      - name: mysqldb
        image: melvincv/mysqldb-mcv
        volumeMounts:
          - mountPath: /var/lib/mysql
            name: db-cache
        resources:
          requests:
            memory: "1000Mi"
            cpu: "500m"
          limits:
            memory: "1500Mi"
            cpu: "1000m"
        ports:
        - containerPort: 3306
      - name: adminer
        image: adminer:4.8.1
        resources:
          requests:
            memory: "256Mi"
            cpu: "250m"
          limits:
            memory: "500Mi"
            cpu: "500m"
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: mysqldb
  namespace: phpcrudapp
spec:
  selector:
    app: mysqldb
  ports:
    - port: 3306
      targetPort: 3306
---
apiVersion: v1
kind: Service
metadata:
  name: adminer
  namespace: phpcrudapp
spec:
  type: NodePort
  selector:
    app: mysqldb
  ports:
    - port: 8010
      targetPort: 8080
      nodePort: 30000
