kubernetes-manifests/app.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: phpcrudapp-d
  namespace: phpcrudapp
  labels:
    app: phpcrudapp
spec:
  replicas: 2
  selector:
    matchLabels:
      app: phpcrudapp
  template:
    metadata:
      labels:
        app: phpcrudapp
    spec:
      containers:
      - name: phpcrudapp
        image: melvincv/phpcrudapp:latest
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: phpcrudapp-svc
  namespace: phpcrudapp
spec:
  selector:
    app: phpcrudapp
  ports:
    - protocol: TCP
      port: 8001
      targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: phpcrudapp-ing
  namespace: phpcrudapp
spec:
  rules:
  - host: myphpapp.melvincv.site
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: phpcrudapp-svc
            port:
              number: 8001
  ingressClassName: nginx
